# sipeapps

./: .gitignore  MANIFEST.in  requirements.txt  setup.cfg  setup.py
financeiro/: apps.py
project/: settings.py  urls.py  wsgi.py
sipeapps/auth/: apps.py  authentication.py  models.py  permissions.py  serializers.py  urls.py  validators.py  viewsets.py
sipeapps/auth/migrations/: 0001_initial.py
sipeapps/auth/tests/: test_login.py  test_usuarios.py
sipeapps/common/: models.py
sipeapps/financeiro/: apps.py  models.py  serializers.py  urls.py  viewsets.py
sipeapps/financeiro/fixtures/: usuario.json
sipeapps/financeiro/migrations/: 0001_initial.py
sipeapps/financeiro/tests/: test_base.py  test_categoria_financeiro.py  test_conta.py  tests.py
sipeapps/pessoa/: apps.py  models.py  serializers.py  urls.py  viewsets.py
sipeapps/pessoa/migrations/: 0001_initial.py
sipeapps/pessoa/tests/: test_cliente.py  test_profissao.py
