[metadata]
name = SipeApps
version = 0.1
description = Conjunto de apps Sipe Sistemas.
long_description = file: README.rst
url = https://www.sipesistemas.com/
author = Sipe Sistemas
author_email = contato@sipesistemas.com
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: